--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,8 @@ spring.h2.console.settings.web-allow-others=false
 ###
 #   Database Settings
 ###
-#au niveau de la console , au niveau de (JDBC URL) , assurer vous de mettre (jdbc:h2:mem:spring-batch)
+#au niveau de la console , au niveau de (JDBC URL) ,
+# au lieu de (jdbc:h2:mem:testdb ) => assurer vous de mettre (jdbc:h2:mem:spring-batch)
 spring.datasource.url=jdbc:h2:mem:spring-batch;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username = sa
 spring.datasource.password =
